time.c: Check if defined(RUBY_MSVCRT_VERSION) to build on Solaris

Fixes [Bug #17947]